--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,3 +113,60 @@ body {
     width: 60%;
     left: 20%;
 }
+
+
+
+.about-main-container{
+    position: absolute;
+    top: 10%;
+    width: 60%;
+    left: 20%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.about-header{
+    font-family: 'Julius Sans One', sans-serif;
+    text-align: center;
+    letter-spacing: 10px;
+    position: relative;
+    width: 100%;
+    background-color: #15161e;
+    color: white;
+    border-top: 1px solid white;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+}
+.about-header-main{
+    font-size: 5rem;
+    text-transform: uppercase;
+}
+.about-header-small{
+    text-transform: uppercase;
+    font-size: 2rem;
+    margin-bottom: 100px;
+}
+
+.about-me{
+    margin-top: 100px;
+    text-align: center;
+    font-family: 'Julius Sans One', sans-serif;
+}
+.about-me-header{
+    font-size: 4rem;
+    letter-spacing: 10px;
+}
+.about-me-more{
+    font-size: x-large;
+    text-transform: lowercase;
+}
+
+.about-pic-pic{
+    height: 700px;
+    width: 700px;
+    border-radius: 50%;
+    filter: grayscale(100%);
+    margin-top: 150px;
+}
