--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,15 +6,41 @@ ul{
     list-style: none;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
 .main-container{
     margin: 5px;
     position: absolute;
-    height: 150%;
-    width: 100%;
+    width: 99%;
     top: 0;
     left: 0;
     background-color: #15161e;
-    border: 1px solid white;
+    /*border: 1px solid white;*/
+    display: flex;
+    flex-direction: column;
+    min-height: 150%;
+}
+
+.main-container-about{
+    margin: 5px;
+    position: absolute;
+    width: 99%;
+    top: 0;
+    left: 0;
+    background-color: #15161e;
+    /*border: 1px solid white;*/
+    display: flex;
+    flex-direction: column;
+    min-height: 200%;
+}
+
+.view{
+    display: flex;
+    flex-direction: column;
+    height: auto;
 }
 
 .nav {
@@ -54,6 +80,7 @@ ul{
     align-items: center;
     font-size: x-large;
     font-family: 'Julius Sans One', sans-serif;
+    margin-top: 200px;
 }
 .footer-item{
     margin-left: 100px;
@@ -68,6 +95,8 @@ ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-bottom: 200px;
+    flex: 1;
 }
 
 .port-project{
@@ -123,13 +152,13 @@ ul{
     position: absolute;
     top: 10%;
     width: 60%;
-    height: 100%;
     left: 20%;
     background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 200px;
 }
 .about-header{
     font-family: 'Julius Sans One', sans-serif;
@@ -154,10 +183,28 @@ ul{
     margin-bottom: 100px;
 }
 
+.about-pic{
+    margin-top: 20%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 100px;
+}
+.about-pic-pic{
+    width: 30%;
+    height: 30%;
+    border-radius: 50%;
+    filter: grayscale(100%);
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,12%)
+}
+
 .about-me{
-    margin-top: 100px;
+    /*margin-top: 20%;*/
     text-align: center;
     font-family: sans-serif;
+
 }
 .about-me-header{
     font-size: 4rem;
@@ -208,6 +255,7 @@ ul{
 
 .about-contact{
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 .contact-header{
     font-size: 4rem;
@@ -219,13 +267,5 @@ ul{
 }
 .contact-content{
     font-family: 'Belleza', sans-serif;
-    font-size: larger;
-}
-
-.about-pic-pic{
-    height: 700px;
-    width: 700px;
-    border-radius: 50%;
-    filter: grayscale(100%);
-    margin-top: 100px;
+    font-size: x-large;
 }
