--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,6 +68,7 @@ a {
 }
 .nav-hover:hover {
     cursor: pointer;
+    color: #65626b;
 }
 
 .footer{
@@ -137,13 +138,6 @@ a {
     margin-top: 300px;
     font-family: 'Belleza', sans-serif;
     font-size: 4rem;
-}
-
-.project-container{
-    position: absolute;
-    top: 10%;
-    width: 60%;
-    left: 20%;
 }
 
 
@@ -268,4 +262,45 @@ a {
 .contact-content{
     font-family: 'Belleza', sans-serif;
     font-size: x-large;
+}
+
+.project-container{
+    position: absolute;
+    top: 10%;
+    width: 60%;
+    height: 100%;
+    left: 20%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.project-heading{
+    width: 100%;
+    height: 12%;
+    background-color: #15161e;
+    color: white;
+    font-family: 'Belleza', sans-serif;
+    font-size: 5rem;
+    text-align: center;
+    border:  1px solid white;
+}
+
+.project-heading-desc{
+    font-size: large;
+    font-family: 'Julius Sans One', sans-serif;
+    margin-bottom: 200px;
+}
+
+.project-star{
+    color: black;
+    font-family: 'Belleza', sans-serif;
+    width: 60%;
+    margin-top: 200px;
+    font-size: x-large;
+    text-align: center;
+}
+.project-star-info{
+    margin-top: 50px;
 }
