--- a/stylesheet.css
+++ b/stylesheet.css
@@ -304,3 +304,14 @@ a {
 .project-star-info{
     margin-top: 50px;
 }
+
+.project-screenshots{
+    margin-top: 200px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.project-img{
+    width: 60%;
+    margin-bottom: 100px;
+}
