--- a/stylesheet.css
+++ b/stylesheet.css
@@ -179,9 +179,9 @@ a {
 
 .about-pic{
     margin-top: 20%;
+    margin-bottom: 100px;
     display: flex;
     align-items: center;
-    margin-bottom: 100px;
 }
 .about-pic-pic{
     width: 30%;
@@ -191,7 +191,9 @@ a {
     position: relative;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,12%)
+    transform: translate(-50%,12%);
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .about-me{
@@ -268,17 +270,16 @@ a {
     position: absolute;
     top: 10%;
     width: 60%;
-    height: 100%;
     left: 20%;
-    background-color: white;
+    background-color: #15161e;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    border: 1px solid white;
 }
 .project-heading{
     width: 100%;
-    height: 12%;
+    height: 34%;
     background-color: #15161e;
     color: white;
     font-family: 'Belleza', sans-serif;
@@ -294,17 +295,52 @@ a {
 }
 
 .project-star{
-    color: black;
+    color: white;
+    background-color: #15161e;
+    font-family: 'Belleza', sans-serif;
+    width: 100%;
+    margin-top: 15px;
+    font-size: x-large;
+    text-align: center;
+    display: none;
+}
+.project-star-info{
+    margin-top: 25px;
+    margin-bottom: 25px;
+    width: 50%;
+    margin-left: 25%;
+}
+.more-info{
+    font-family: 'Julius Sans One', sans-serif;
+    color: #65626b;
+    font-size: large;
+    text-transform: uppercase;
+    margin-top: 50px;
+    cursor: pointer;
+    transition-duration: .5s;
+}
+.more-info:hover {
+    color: white;
+}
+
+.project-tech{
+    color: white;
     font-family: 'Belleza', sans-serif;
     width: 60%;
-    margin-top: 200px;
+    margin-top: 15px;
     font-size: x-large;
     text-align: center;
 }
-.project-star-info{
+.project-tech-info{
     margin-top: 50px;
 }
 
+.screenshots-heading{
+    font-size: 4rem;
+    font-family: 'Julius Sans One', sans-serif;
+    color: white;
+    text-transform: uppercase;
+}
 .project-screenshots{
     margin-top: 200px;
     display: flex;
