--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,6 @@ ul{
 }
 
 a {
-    color: black;
     text-decoration: none;
 }
 
@@ -321,6 +320,19 @@ a {
     transition-duration: .5s;
 }
 .more-info:hover {
+    color: white;
+}
+
+.visit-site{
+    font-family: 'Julius Sans One', sans-serif;
+    color: #65626b;
+    font-size: large;
+    text-transform: uppercase;
+    margin-top: 50px;
+    cursor: pointer;
+    transition-duration: .5s;
+}
+.visit-site:hover {
     color: white;
 }
 
