--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -253,7 +253,11 @@ a {
 
 .about-contact{
     margin-top: 100px;
+    width: 100%;
     margin-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .contact-header{
     font-size: 2rem;
